--- a/themes/dark/controls.css
+++ b/themes/dark/controls.css
@@ -109,11 +109,11 @@
 .map-fullscreen {
   width:30px;
   height:30px;
-  background-position:-90px 0;
+  background-position:-91px -1px;
   position:absolute;
   top:10px;
   left:74px;
-  z-index:99999;
+  z-index:2;
   }
 
 .map-fullscreen-map {
