--- a/less/themes/dark/controls.less
+++ b/less/themes/dark/controls.less
@@ -8,9 +8,8 @@
 @background:  #404040;
 @border:      #101010;
 @color:       #202020;
-@disabled:    #707070;
-@icons:       @brightIcons;
-@iconsRetina: @brightIconsRetina;
+@icons:       @whiteIcons;
+@iconsRetina: @whiteIconsRetina;
 
 @import '../../mixins.less';
 
