--- a/less/themes/melon/controls.less
+++ b/less/themes/melon/controls.less
@@ -5,11 +5,11 @@
 
 /* Variables + Utils
 ---------------------------------------------*/
-@background:  #fff;
-@border:      #ccc;
-@color:       #202020;
-@icons:       @darkIcons;
-@iconsRetina: @darkIconsRetina;
+@background:  #2a6d51;
+@border:      #1c4836;
+@color:       #404040;
+@icons:       @whiteIcons;
+@iconsRetina: @whiteIconsRetina;
 
 @import '../../mixins.less';
 
