--- a/less/themes/melon/share.less
+++ b/less/themes/melon/share.less
@@ -1,12 +1,12 @@
 /*
- * MapBox Map Dark Share Styles
+ * MapBox Map Light Share Styles
  * Copyright (c) 2013 ; Licensed BSD
 */
 
 /* Variables + Utils
 ---------------------------------------------*/
-@background:  #404040;
-@border:      #101010;
+@background:  #2a6d51;
+@border:      #1c4836;
 @color:       #fff;
 @icons:       @whiteIcons;
 @iconsRetina: @whiteIconsRetina;
