--- a/demo/themes/melon/share.css
+++ b/demo/themes/melon/share.css
@@ -9,9 +9,9 @@
 .share {
   font: bold 10px/18px Arial, sans-serif;
   text-align: center;
-  color: #202020;
-  border: 1px solid #cccccc;
-  background: #ffffff;
+  color: #ffffff;
+  border: 1px solid #1c4836;
+  background: #2a6d51;
   position: absolute;
   top: 45px;
   left: 10px;
@@ -29,11 +29,11 @@
   border-radius: 3px;
 }
 .share:hover {
-  color: #202020;
+  color: #ffffff;
 }
 .share:active {
-  background-color: #f2f2f2;
-  border-color: #bfbfbf;
+  background-color: #235b43;
+  border-color: #153628;
   -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.15);
   box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.15);
 }
@@ -133,7 +133,7 @@
   margin: 5px 5px 10px 0;
   color: #fff;
   font-weight: 700;
-  border: 2px solid #cccccc;
+  border: 2px solid #1c4836;
   padding: 0 16px;
   height: 26px;
   line-height: 26px;
