--- a/demo/demo.css
+++ b/demo/demo.css
@@ -189,6 +189,10 @@ strong {
   padding:40px 20px;
   margin:0 auto;
   }
+.theme {
+  border:1px solid #ccc;
+  margin-bottom:20px;
+  }
 .header {
   border-bottom:1px solid #ccc;
   padding:0 0 10px;
@@ -197,7 +201,8 @@ strong {
           box-shadow:0 1px 0 #fff;
   }
 .heading {
-  margin:0 0 10px;
+  background:#fff;
+  padding:15px 10px;
   }
   .heading h3 {
     position:relative;
@@ -213,7 +218,7 @@ iframe {
   background:#fff;
   width:100%;
   height:240px;
-  margin-bottom:20px;
+  display:block;
   }
 .footer {
   background:#fff;
